# Hearth

./: .gitignore  ARCHITECTURE.md  README.md
purse/: DEV_COMMANDS.md  HEARTH_PURSE_SPEC.md  docker-compose.dev.yml  docker-compose.yml
purse/backend/: Dockerfile  alembic.ini  pyproject.toml
purse/backend/app/: config.py  database.py  main.py
purse/backend/app/models/: __init__.py  budget_config.py  forecast_scenario.py  merchant_override.py  ml_training_log.py  transaction.py
purse/backend/app/routers/: anomalies.py  budgets.py  categories.py  forecasts.py  ml.py  sync.py  transactions.py
purse/backend/app/services/: categorization.py  category_mapping.py  ml.py  payee_normalizer.py  ynab.py
purse/backend/migrations/: env.py
purse/backend/migrations/versions/: afbbb605a9b3_initial_schema.py
purse/backend/scripts/: backfill_merchant_clean.py
purse/backend/sync/: scheduler.py
purse/backend/tests/: conftest.py
purse/backend/tests/integration/: conftest.py  test_anomalies.py  test_budgets.py  test_categories.py  test_forecasts.py  test_sync.py  test_sync_preserves_categorisation.py  test_transactions.py
purse/backend/tests/unit/: test_categorization.py  test_ml.py  test_payee_normalizer.py  test_ynab.py
purse/frontend/: index.html  package-lock.json  package.json  vite.config.ts
purse/frontend/public/: manifest.json
purse/frontend/src/: App.tsx  main.tsx
purse/frontend/src/api/: budgets.ts  categories.ts  client.ts  ml.ts  transactions.ts
purse/frontend/src/components/: BudgetRow.css  BudgetRow.tsx  CategoryFilterPills.css  LedgerRow.css  (+10 more)
(+26 files in other folders)
